dnprogs (2.39.1) unstable; urgency=low

  * Honour DEB_BUILD_OPTIONS=nostrip
    Closes: #436773

 -- Patrick Caulfield <patrick@debian.org>  Sat, 11 Aug 2007 11:11:38 +0100

dnprogs (2.39) unstable; urgency=low

  * Fix compile error with latest kernel headers.
    Closes: #427324

 -- Patrick Caulfield <patrick@debian.org>  Mon,  4 Jun 2007 09:58:58 +0100

dnprogs (2.38.2) unstable; urgency=low

  * Add Portugese debconf translation
    Closes: #409854, ##409894
  * Update Czech debconf translation
    Closes: #402729
    
 -- Patrick Caulfield <patrick@debian.org>  Sun, 11 Feb 2007 13:11:06 +0000

dnprogs (2.38.1) unstable; urgency=low

  * Updated Dutch debconf translation
    Closes: #404561

 -- Patrick Caulfield <patrick@debian.org>  Thu, 28 Dec 2006 13:26:07 +0000

dnprogs (2.38) unstable; urgency=low

  * Add -E switch to dncopy to allow it to continue on output error.
  * Better reporting of filename syntax errors reported by remote end.
    e.g. tilde characters in local files being rejected by VMS.
  * Add French debconf translation
    Closes: #400712, #402126
  * Update German debconf translation
    Closes: #401907
  * Fix some debconf template typos
    Closes: #401906
  * Updated Japanese debconf translation
    Closes: #402004   
  
 -- Patrick Caulfield <patrick@debian.org>  Sat, 16 Dec 2006 15:24:44 +0000

dnprogs (2.37.2) unstable; urgency=low

  * Add Vietnamese debconf translation
    Closes: #313566
  * Fix typo in German debconf translation
    Closes: #314123
  * Make library packages Recommend rather then Depend on dnet-common
    so they can be installed without configuring DECnet. dnet-progs still
    depends on dnet-common to simplfy installations
    Closes: #399665
  * Add LSB sections to init.d scripts.
 
 -- Patrick Caulfield <patrick@debian.org>  Fri, 24 Nov 2006 15:50:18 +0000

dnprogs (2.37.1) unstable; urgency=low

  * Add Spanish debconf translation.
    Closes: #367286
